--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.4",
-    "lucide-react": "^0.563.0",
-    "recharts": "^3.7.0",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "lucide-react": "0.463.0",
+    "recharts": "2.12.7",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
